gl31-master/src/test/deca/context/valid/complet/meth_cast.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 24/01/2021
class A{
    int cast(float param){
        return (int)(param);
    }
}